# pyvista-tui

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  pyproject.toml
.claude/skills/pyvista-tui/: SKILL.md
.github/workflows/: ci.yml
pyvista_tui/: __init__.py  __main__.py  _accessor.py  _plot.py  display.py  effects.py  renderer.py  theme.py
pyvista_tui/cli/: __init__.py  _commands.py
pyvista_tui/terminal/: __init__.py  _detect.py  _iterm2.py
pyvista_tui/tui/: __init__.py  app.py  boot.py  camera.py  viewport.py
pyvista_tui/utils/: __init__.py  loader.py  text.py
tests/: conftest.py  test_accessor.py  test_ascii.py  test_boot.py  test_camera.py  test_cli.py  test_context_manager.py  test_cycle_scalars.py  test_display.py  test_effects.py  test_image_regression.py  test_loader.py  test_loader_traceback.py  test_output_modes.py  test_plot_api.py  test_prepare_mesh.py  test_renderer.py  test_set_cpos.py  test_set_view.py  test_terminal.py  test_terminal_inline.py  test_text.py  test_theme.py  test_theme_registry.py  test_tui.py
